force-app/src/objects/c2g__PaymentsPlusSettingsPublic__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Payments Plus Options</description>
    <fields>
        <fullName>c2g__GLAFiltering__c</fullName>
        <defaultValue>&quot;TB1=Liabilities,TB2=Current Liabilities,TB2=Long Term Liabilities&quot;</defaultValue>
        <description>Control GLA filtering in Payments Selection and Payments Plus by allowing custom Trial Balance combinations.</description>
        <inlineHelpText>Use custom Trial Balance combinations to control the GLAs retrieved for Payments Selection and Payments Plus. Use the following format: TB1=Liabilities,TB2=Current Liabilities,TB3=Creditors,TB3=Provisions. If set as NO FILTERING all GLAs are retrieved.</inlineHelpText>
        <label>GLA Filtering</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__MaximumAccountsSentEmailRemittances__c</fullName>
        <description>The maximum number of accounts that can be sent email remittances in one batch.</description>
        <inlineHelpText>The maximum number of accounts that can be sent email remittances in one batch.</inlineHelpText>
        <label>Maximum Accounts Sent Email Remittances</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__MaximumVendorAccounts__c</fullName>
        <description>The maximum number of accounts that you can view in the drop-down for the Vendor Name field.</description>
        <inlineHelpText>The maximum number of accounts that you can view in the drop-down for the Vendor Name field. The default limit is 2000.</inlineHelpText>
        <label>Maximum Accounts in Vendor Name Field</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentsPlusCongaPrinting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>In the Checks stage of Payments Plus, this allows you to print checks using Conga Integration.</description>
        <label>Payments Plus Conga Printing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentsPlusCustomFilters__c</fullName>
        <description>In the Transactions stage of Payments Plus, this allows you to customize the filters used to retrieve transactions.</description>
        <label>Payments Plus Custom Filters</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Payments Plus Options</label>
</CustomObject>